dr-browser@0.0.0-dev.1
notable change:
- use custom lint
- package update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "dr-browser",
-  "version": "0.0.0-dev.0",
+  "version": "0.0.0-dev.1",
   "description": "A collection of strange functions, for browser",
   "author": "dr-js",
   "license": "MIT",
@@ -10,7 +10,6 @@
   "browser": "library/index.js",
   "scripts": {
     "// script ======================": "",
-    "script-base": "babel-node ./script quiet",
     "script-pack": "babel-node ./script quiet pack",
     "script-pack-test": "babel-node ./script verbose pack test",
     "script-publish": "babel-node ./script pack publish",
@@ -26,6 +25,7 @@
     "test-browser-dev": "babel-node ./script/testBrowser development",
     "// =============================": "",
     "analyze-stat": "npx webpack-bundle-analyzer .temp-gitignore/profile-stat.json",
+    "lint": "eslint ./source/ ./script/ ./example/",
     "test": "npm run script-pack-test",
     "prepack": "echo \"Error: pack with script-*\" && exit 1"
   },
@@ -34,11 +34,11 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "dr-js": "0.21.1-dev.3"
+    "dr-js": "^0.22.2 || ^0.22.2-dev.0"
   },
   "devDependencies": {
-    "dr-dev": "0.0.6-dev.4",
-    "dr-dev-web-puppeteer": "0.0.6-dev.4"
+    "dr-dev": "0.0.6-dev.8",
+    "dr-dev-web-puppeteer": "0.0.6-dev.8"
   },
   "sideEffects": false
 }
