dr-browser@0.0.0-dev.2
notable change:
- package update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "dr-browser",
-  "version": "0.0.0-dev.1",
+  "version": "0.0.0-dev.2",
   "description": "A collection of strange functions, for browser",
   "author": "dr-js",
   "license": "MIT",
@@ -10,19 +10,19 @@
   "browser": "library/index.js",
   "scripts": {
     "// script ======================": "",
-    "script-pack": "babel-node ./script quiet pack",
-    "script-pack-test": "babel-node ./script verbose pack test",
-    "script-publish": "babel-node ./script pack publish",
-    "script-publish-dev": "babel-node ./script pack publish-dev",
-    "script-generate-spec": "babel-node ./script/generateSpec ./tempFileDelete.config.json",
+    "script-pack": "node -r @babel/register ./script quiet pack",
+    "script-pack-test": "node -r @babel/register ./script verbose pack test",
+    "script-publish": "node -r @babel/register ./script pack publish",
+    "script-publish-dev": "node -r @babel/register ./script pack publish-dev",
+    "script-generate-spec": "node -r @babel/register ./script/generateSpec ./tempFileDelete.config.json",
     "script-delete-temp-build-file": "dr-js -c ./tempFileDelete.config.json",
     "// build =======================": "",
-    "build-webpack": "babel-node ./script/webpack production profile",
-    "build-webpack-dev": "babel-node ./script/webpack development watch",
+    "build-webpack": "node -r @babel/register ./script/webpack production profile",
+    "build-webpack-dev": "node -r @babel/register ./script/webpack development watch",
     "build-module": "cross-env BABEL_ENV=module babel ./source --out-dir ./output-gitignore/module",
     "// test-browser ================": "",
-    "test-browser": "babel-node ./script/testBrowser production",
-    "test-browser-dev": "babel-node ./script/testBrowser development",
+    "test-browser": "node -r @babel/register ./script/testBrowser production",
+    "test-browser-dev": "node -r @babel/register ./script/testBrowser development",
     "// =============================": "",
     "analyze-stat": "npx webpack-bundle-analyzer .temp-gitignore/profile-stat.json",
     "lint": "eslint ./source/ ./script/ ./example/",
@@ -30,15 +30,15 @@
     "prepack": "echo \"Error: pack with script-*\" && exit 1"
   },
   "engines": {
-    "node": ">=10.15",
-    "npm": ">=6"
+    "node": ">=10.16",
+    "npm": ">=6.10"
   },
   "dependencies": {
-    "dr-js": "^0.22.2 || ^0.22.2-dev.0"
+    "dr-js": "^0.23.0 || ^0.23.0-dev.2"
   },
   "devDependencies": {
-    "dr-dev": "0.0.6-dev.8",
-    "dr-dev-web-puppeteer": "0.0.6-dev.8"
+    "dr-dev": "0.0.7-dev.2",
+    "dr-dev-web-puppeteer": "0.0.7-dev.2"
   },
   "sideEffects": false
 }
