--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@dr-js/browser",
-  "version": "0.1.0",
+  "version": "0.1.1-dev.0",
   "description": "A collection of strange functions, for browser",
   "author": "dr-js",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "test-browser": "node -r @babel/register ./script/testBrowser production",
     "test-browser-dev": "node -r @babel/register ./script/testBrowser development",
     "// =============================": "",
-    "analyze-stat": "npx webpack-bundle-analyzer .temp-gitignore/profile-stat.json",
+    "analyze-stat": "npx webpack-bundle-analyzer .temp-gitignore/profile-stat.json output-gitignore/library",
     "lint": "eslint ./source/ ./script/ ./example/",
     "test": "npm run script-pack-test",
     "prepack": "echo \"Error: pack with script-*\" && exit 1"
@@ -33,11 +33,11 @@
     "npm": ">=6.12"
   },
   "dependencies": {
-    "@dr-js/core": "^0.1.0 || ^0.1.1-dev.0"
+    "@dr-js/core": "^0.2.0 || ^0.2.0-dev.6"
   },
   "devDependencies": {
-    "@dr-js/dev": "^0.1.0",
-    "@dr-js/dev-web-puppeteer": "^0.1.0"
+    "@dr-js/dev": "0.2.0-dev.1",
+    "@dr-js/dev-web-puppeteer": "0.2.0-dev.1"
   },
   "sideEffects": false
 }
