--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        node-version: [ 12.x, 13.x ]
+        node-version: [ 14.x ]
 
     runs-on: ${{ matrix.os }}
 
@@ -29,5 +29,3 @@ jobs:
       - run: npm ci
 
       - run: npm test
-        env:
-          CI: true
